addd last reference

--- a/index.Rmd
+++ b/index.Rmd
@@ -341,5 +341,5 @@ So we get to the point and answer our primary research question, Yes, U.S. educa
 
 * Tuition and Fees, 1998-99 Through 2018-19. (2020). Retrieved 28 August 2020, from https://www.chronicle.com/article/tuition-and-fees-1998-99-through-2018-19/
 
-
+* The cost of studying at a university in the United States. (2020). Retrieved 28 August 2020, from https://www.timeshighereducation.com/student/advice/cost-studying-university-united-states
 
