Adding names to the readme.md and new questions under the section secondary questions in the index.rmd

--- a/index.Rmd
+++ b/index.Rmd
@@ -73,6 +73,10 @@ This information can be drawn from salary_potential, if middle-career pay differ
 * How does the tuition rate vary over the various years for the various types of courses?
 
 * What is percentage of enrollment of the diverse population studying, across the US ?
+
+* Is diversity amongst students in the United States the same across all states and universities?
+
+* Does paying high tuition guarantee a higher salary? Which college has more potential in career growth on the basis of initial salary offered? 
  
 # Data description
 
