Writing a description for figure 5.1

--- a/index.Rmd
+++ b/index.Rmd
@@ -240,7 +240,7 @@ four <- ridges_dat %>%
 grid_arrange_shared_legend(two,four,ncol=1, nrow=2)
 ```
 
-In the figure \@ref(fig:tut-income-diff) we see that after earning any scholarships / awards we note a decrease in tuition fees. A popular aspect that we find over the years is that the scholarship earned by the various applicants is often judged much of the time , based on the applicant's income level and certainly a strong profile that the applicant would already have. Looking closely at the graph, we see that for applicants with income level above USD 110,000, there is a smaller gap in the scholarship relative to the other level of income. Applicants with income rates ranging from 0 to 30,000 USD, have a significant gap between the real tuition costs and the amount charged for the scholarship by the applicants. We also note that the gap in these patterns from the year 2010 has been showing and upward trend. We may therefore confidently state that applicants with lower incomes earn more scholarship grants when they are compared with applicants with higher incomes.
+Figure \@ref(fig:) displays the distribution of tuition fees for the residents and non-residents of US. Majorly the universities in the US offer two types of degree courses, which are a 2-Year degree course and a 4-Year degree courses. 2-Year degree courses are predominantly for students enrolled in a master's degree and 4-Year degree courses are generally offered to students pursuing a bachelor's degree. We have separated the two and plotted two different graphs as tuition fee varies majorly for the two different types of courses offered. As seen in \@ref(fig:), the red density plot depicts the tuition fee for non-residents and the histogram depicts the tuition fee for residents. We observe that for both 2-Year degrees and 4-Year degrees citizens and non-residents prefer going to public universities or profit organisations instead of private universities. The density in private universities is low as compared to the other two as this may be due to the higher expense of fees in private universities. It is clear from the above figure that both citizens and non-residents of the US prefer going to for profit or public universities to pursue higher education.
 
 ## Student's Career Development among America Universities
 
