--- a/index.Rmd
+++ b/index.Rmd
@@ -27,17 +27,7 @@ library(DT)
 library(plotly)
 ```
 
-# Acknowledgements
 
-Our sincere gratitude goes out for their guidance and encouragement to Professor Dianne Cook, Dr Emi Tanka, and the tutors Sayani Gupta and Sherry Zhang. Their culminating efforts have placed us in a position where we can generate this report collaboratively.
-
-# Introduction and Motivation
-
-Attending a university course is a big decision for students, because it will have a large effect on the advancement of a person's future, with a huge cost to both money and time, based on the above evidence, we can conclude that going to university is indeed an investment and the return on investment is very worrying. 
-
-Since everyone knows that the US is one of the most popular yet costly higher education destinations in the world, and the cost range is wide (for example: tuition fees range from $5,000 to $50,000 (£4,074-£ 40,746) per annual). Most undergraduate degrees last four years, so on average students graduate with a debt worth $132,860 (£101,505), we are interested in how good the investment in American education is.
-
-In this article , we will look at the various factors that influence the U.S. education and whether studying at the renowned U.S. universities is really worth the investment. On thorough analysis of this we have realized there are several variables in the dataset that enabled us to assess the cost and expenditure of studying in the United States. We have tried our best to cover most of the important variable which allows us to evaluate and analyse efficiently. Since most variables have character datatypes, and a few in numeric, the visualisation scope is very limited.
 
 ```{r dat-load, message = FALSE, echo=FALSE}
 tuition_cost <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-03-10/tuition_cost.csv')
@@ -51,33 +41,6 @@ historical_tuition <- readr::read_csv('https://raw.githubusercontent.com/rfordat
 diversity_school <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-03-10/diversity_school.csv')
 ```
 
-# Research Question
-
-## Primary Question
-
-How valuable is the investment in education among America universities? 
-
-Since tuition fee is relatively high for most students, or their families, value for money is of great concern. This question is to decover how highly valued are the tuition fees among universities in America, by analyzing the various aspects of the education system in US.
-
-## Secondary Questions
-
-* How does the tuition fee vary across the different types of institutions? 
-This information can be drawn from tuition cost, and can give a point of view of the American education system.
-
-* What is the ratio of net-cost to total cost among America universities?
-This can show how much burden a student has taken.
-
-* How is student's career development among America universities? 
-This information can be drawn from salary_potential, if middle-career pay differ a lot from early-career pay, then we believe there is a well career development in that university.
-
-* How does the tuition rate vary over the various years for the various types of courses?
-
-* What is percentage of enrollment of the diverse population studying, across the US ?
-
-* Are all States and universities accommodative of students of different ethnic and economic backgrounds?
-
-* Does paying high tuition guarantee a higher salary? Which college has more potential in career growth on the basis of initial salary offered? 
- 
 # Data description 
 
 It is through data collection that a business or management has the quality information that they need for further analysis, study, and research to make informed decisions. 
@@ -88,263 +51,8 @@ This collection of data primarily receives all the information from various sour
 
 The data, taken from the original pages, turned out to be very large in size, which is why the author, for the convenience of the audience and to produce informative results, filtered the data into five comma-separated documents using web scraping in R with the support of the rvest package.
 
-Let's look at the small snippets of the various data sets, and get a better understanding of the variables
+Upon futher inspection, we also found out that some of the datasets have a few *missing values* using the visdat package. We have dealt with all of them and removed all the missing values.
 
-## Data on Diversity 
-
-The diversity_school data set comes [The Chronicle of Higher Education](https://www.chronicle.com/article/student-diversity-at-4-725-institutions).
-
-```{r ds, echo=FALSE}
-head(diversity_school,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
-```
-
-- Name has data type character properties that describe the school name
-- Total Enrollment has double datatype properties representing the total number of students enrolled
-- State with character datatype representing the various states
-- Category with character properties defining the group Group / Racial / Gender
-- Enrollment with double datatype properties specifying the specific enrollment.
-
-## Data on History 
-
-The historical_tuition dataset been obtained from [U.S. Department of Education, National Center for Education Statistics](https://nces.ed.gov/fastfacts/display.asp?id=76)
-
-```{r ht, echo=FALSE}
-head(historical_tuition,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
-```
-
-- type variable having character datatype describes the Type of school (All, Public, Private)
-- year having character format describes the corresponding Academic year
-- tuition_type having	character datatype refers to duration of the degree, Tuition Type All Constant (dollar inflation adjusted), 4 year degree constant, 2 year constant, Current to year, 4 year current, 2 year current
-- tuition_cost having	double datatype represents the education fees/Tuition cost in USD
-
-## Data on Salary Potential
-
-Salary_potential data set origins from [Payscales](https://www.payscale.com/college-salary-report/best-schools-by-state/bachelors/new-hampshire).
-
-```{r sp, echo=FALSE}
-head(salary_potential,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
-```
-
-- rank having	double datatype properties defines the potential salary rank within state
-- early_career_pay having double datatype defines the	estimated early career pay in USD
-- mid_career_pay having double datatype defines the	estimated mid career pay in USD
-- make_world_better_percent having double datatype represents the	percent of alumni who think they are making the world a better place
--stem_percent having double datatype defines the percent of student body in science, technology, engineering and mathematics (STEM)
-
-## Data on the Tuition Cost
-
-The Tuition cost data set is obtained from [the Chronicle of Higher Education.](https://www.chronicle.com/article/tuition-and-fees-1998-99-through-2018-19)
-
-```{r tc, echo=FALSE}
-head(tuition_cost,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
-```
-
-- in_state_tuition having double datatype depicts the Tuition fee for in-state residents in USD
-- out_of_state_tuition	double	Tuition for out-of-state residents in USD
-
-## Data on Tuition Income
-
-The tuition income has been obtained from the dataset [Tution Tracker](https://www.tuitiontracker.org/) and [Priceconomics](https://priceonomics.com/ranking-the-most-and-least-diverse-colleges-in/)
-
-```{r ti, echo=FALSE}
-head(tuition_income,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
-```
- 
-- campus having	character datatype depicts whether the school is	On or off-campus
-- net_cost having double datatype denotes Net-cost - average actually paid after scholarship/award
-- income_lvl having	character datatype gives u information about the	Income bracket
-
-
-## Data Structure and Cleaning Process
-
-All the information gathered in these different data files was achieved by web scraping using the rvest library, html nodes, html url, and generating data set in tibble, mutating new columns and linking rows together later on. All the data was scraped and written in csv and later, the csv was read in to R environment using the readr function.
-
-# Analysis and Findings
-
-One of the key reasons students chose to study in the USA is the prestige of the country for renowned higher education programs. Completing a degree from one of the best higher education programs in the world would make you stand out from peers of similar backgrounds and job experiences. 
-
-Let us examine and know the important facts about the US education system. We look at the various aspects when studying, the diversity of education, the history of education, the cost of tuition, income among people people in the United States, the different wages currently on the market, and similar exciting analyses.
-
-## The Distribution of Tution Fees in US.
-
-Let us look at the distribution of the spectrum of tuition fees in the United States for residents and non-residents of the United States across the various types of institutions in the United States
-
-```{r dist-tut, fig.cap="Distribution of Tution Fees in US", fig.align='center', message=FALSE, warning=FALSE}
-
-ridges_dat <- tuition_cost %>% dplyr::filter(tuition_cost$type != "Other")
-
-p1 <- ggplot(ridges_dat, aes(x = in_state_tuition, y = type, fill = stat(x))) +
-  geom_density_ridges_gradient(scale = 3, rel_min_height = 0.01) + 
-  scale_fill_viridis(name = "Range of Tution Fees in USD") + 
-  labs(title = 'Distribution of Tuition Fees for the Residents of US') + theme_ridges(font_size = 13, grid = TRUE) +
-  xlab("Tution fee in USD for the residents of USA")+
-   ylab("Type of Insitution")
-
-p2 <- ggplot(ridges_dat, aes(x = out_of_state_tuition, y = type, fill = stat(x))) +
-  geom_density_ridges_gradient(scale = 3, rel_min_height = 0.01) + 
-  scale_fill_viridis(name = "Range of Tution Fees in USD") + 
-  labs(title = 'Distribution of Tuition Fees for the Non Residents of US') + theme_ridges(font_size = 13, grid = TRUE) +
-  xlab("Tution fee in USD for the non-residents of USA") +
-  ylab("Type of Insitution")
-
-grid.arrange(p1,p2)
-```
-
-In the figure \@ref(fig:dist-tut) taking a closer look at the graph, we can observe the distribution of tuition fees, we can conclude that the levels for both residents and non-residents of the United States vary. Some of the important results from this graph are, mainly US non-residents prefer, heading to the country's public or for profit institutions rather than the private university. From the plot it is very apparent that the private rates are exceedingly high, some going up to the $60,000. Let's speak about U.S. residents, we see that U.S. residents prefer public colleges, one of the reasons why tuition may be comparatively less than the other types of institutions. Therefore, we conclude that the expense of private universities is higher for U.S. citizens and non-residents, relative to public and profit institutions, we see more non-residents entering U.S. public universities. Even some people are entering the private institutions.
-
-## Difference in fees after any Scholarship / Awards Earned
-
-As we know, students are provided grants for their education in various colleges, which lowers the pressure of the tuition fess by several inches. Let us understand if the amount of income is at the criterion when deciding on the student grants.
-
-```{r tut-income-diff, fig.cap="Difference in tution fees after Scholarships/Awards", fig.align='center', message=FALSE, warning=FALSE}
-tuition_income <- tuition_income %>% mutate(diff = total_price - net_cost)
-
-ggplot(tuition_income, aes(income_lvl, diff)) +
-  geom_bar(stat='identity', fill="forest green") +
-  facet_wrap(~year) + 
-  theme(axis.text.x = element_text(angle=65, vjust=0.6)) + 
-  labs(y="Difference in the Fees after Scholarship", 
-       x="Income Level of the University Applicants"
-      ) +  scale_y_continuous(labels = comma_format(big.mark = ".",
-                                           decimal.mark = ","))
-```
-
-In the figure \@ref(fig:tut-income-diff) we see that after earning any scholarships / awards we note a decrease in tuition fees. A popular aspect that we find over the years is that the scholarship earned by the various applicants is often judged much of the time , based on the applicant's income level and certainly a strong profile that the applicant would already have. Looking closely at the graph, we see that for applicants with income level above USD 110,000, there is a smaller gap in the scholarship relative to the other level of income. Applicants with income rates ranging from 0 to 30,000 USD, have a significant gap between the real tuition costs and the amount charged for the scholarship by the applicants. We also note that the gap in these patterns from the year 2010 has been showing and upward trend. We may therefore confidently state that applicants with lower incomes earn more scholarship grants when they are compared with applicants with higher incomes.
-
-## Student's Career Development among America Universities
-
-After graduation, a student's improvement can be calculated in terms of his wage growth. Let's look at the various states, where we see the greatest change in the wage growth.
-
-```{r stud-develop, fig.cap="Students Career Development", fig.align='center', message=FALSE, warning=FALSE}
-
-salary_potential <-salary_potential %>% 
-  mutate(improvement= (mid_career_pay-early_career_pay)*100/early_career_pay)
-
- salary_potential %>%  
-  ggplot(aes(x = reorder(state_name, improvement), y = improvement)) +
- geom_bar(stat='identity', fill = "blue", width = 0.75) + 
-    theme(axis.text.x = element_text(angle=65, vjust=0.6)) + 
-  labs(y="Sum of Improvement of Salaries", 
-       x="States of the US"
-      ) 
-
-```
-In the figure \@ref(fig:stud-develop) we note wage increases in various US states. We conclude that graduates, who have completed their California education, showed the greatest increase in their employment and mid-life incomes. We note, on close observation, that New Jersey, Pennsylvania, Massachusetts, Ohio and New York all show great levels of wage growth. Most of the States in the US, shows a decent growth of salaries in their existence excluding a handful. From the above graph we have reported a few states that show strong improvement levels in the salary. Furthermore, this leads us to believe that students who have completed their education in these states have increased their salaries over the years, which allows us to understand the student's career development over the years.
-
-After researching salary increases, our interests in terms of which universities in the United States, in which state shows an improved amount of more than 75% and their corresponding rank in that state. The table helps the user find the university's preferred option, its ranking, in which state the university is situated.
-
-```{r improvement-rate}
-top_colleges <- salary_potential %>% 
-dplyr::filter(improvement > 0.75) %>% 
-  dplyr::select(name, state_name, rank) 
-```
-
-```{r imp, fig.cap="Institutions showing more than 75% Improvement Rate in salaries after Education", fig.align='center'}
-DT::datatable(top_colleges, 
-              rownames = FALSE,
-              filter="top", 
-              options = list(pageLength = 5, scrollX=T))
-```
-
-## Alumini of US that Make World a Better Place to Live
-
-Alumni serve many important positions, such as helping create and develop the brand of an organization through word-of-mouth marketing. Alumni play an significant role in promoting organizations that benefit students and their activities. Let us look at alumni from which state a better place to stay in a world
-
-```{r bcc, fig.cap="Alumini that make the world a better place to Live", fig.align='center', fig.height=9, fig.width=9, message=FALSE, warning=FALSE}
-
-ggplot(salary_potential, aes(x=state_name, y = make_world_better_percent)) +
-  geom_bar(stat="identity", fill=alpha("blue", 0.3)) +
-  ylim(-100,120) +
-  theme_minimal() + theme(axis.title.x = element_blank(), axis.title.y = element_blank(), axis.text.y = element_blank()) + ggtitle("Alumni that contribute to make a world a better place to Live") + 
-  theme(plot.title = element_text(hjust = 0.5)) +
-  coord_polar(start = 0) 
-```
-In the figure \@ref(fig:bcc) We can clearly distinguish that that students passed out from the universities of the following state Mane, Montana, Oklahoma, Hawaii and Florida contribute the most to making this world survive better than the majority of the alumni in different states in the United States. 
-
-## Diversity in Education in US
-
-US is one of the country with the highest rankings, showing cultural diversity. US has student coming from around the world. Let's evaluate the various groups and the percentage of US university enrollment.
-
-```{r boxplot, fig.cap="Percentage of Enrollment among different universities throughout US", fig.align='center', message=FALSE, warning=FALSE, fig.width=10}
-
-diversity_school <- diversity_school %>% mutate(Per = enrollment/total_enrollment*100)
-
-boxplot <- ggplot(diversity_school, aes(category,Per, fill = category)) + theme(axis.text.x = element_text(angle=90)) + 
-  geom_boxplot(outlier.colour="black", outlier.shape=16,
-             outlier.size=0.5, width = 0.75) +
-  theme(legend.position="none") +  
-  labs(y="Percentage of Enrollment", 
-       x="Different Categories enrolled across US"
-      ) 
-
-interactive_boxplot <- ggplotly(boxplot)
-
-interactive_boxplot
-
-```
-In the figure \@ref(fig:boxplot) helps us in  finding out the different groups of people who have enrolled in the various universities in the US. The figure makes us understand that white is the majority of people enrolled in American universities, followed by a complete group of minorities. Using the interactive hover function, we can see the different quartiles of people enrolled in that university. The boxplot tells us the the different values of the people enrolled, thus giving us the a good indication of spread out values. The hover over function helps us to understand the different intervals and the number of students enrolled in the US. This graphs allows us to conclude that the we can witness the different cultural diversity in terms of education.
-
-# Conclusion
-
-The standard of U.S. education is of highly remarkable. Through our study, we saw distribution of tuition fees in the U.S. and concluded that residents and non-residents tend to go to public and prosperous universities with good tuition fees. Furthermore, we witnessed that the US education system provides various grants and scholarships in the case of applicants having a strong profile and a lower income level to enable the student enter to the desired university.
-
-On admission we saw the numerous states across the USA showing great progress in the growth of the student career in terms of their salary potential. Through our study we found that students' growth is mostly above 50 percent. We also saw alumni contributions from the various states around the US. Finally, we've seen the various diverse populace found in the US.
-
-Through the exploration of the dataset, therefore, we infer that, if you study in the U.S., you will mainly enter a public and private university, you will earn various scholarships and grants according to your level of income and profile. Upon completion of your schooling, we saw the breadth of the career growth of the applicant, which showed promising results, and witnessed the U.S. schooling in global diversity while making you more global and providing the right exposure.
-
-So we get to the point and answer our primary research question, Yes, U.S. education is value-for-money and the investment really is worth it. The returns from these investments are compelling, too.
-
-# References
-
-* Wickham et al., (2019). Welcome to the tidyverse. Journal of Open Source
-  Software, 4(43), 1686. https://doi.org/10.21105/joss.01686
-  
-* Hadley Wickham, Romain François, Lionel Henry and Kirill Müller (2020). dplyr: A
-  Grammar of Data Manipulation. R package version 1.0.1.
-  https://CRAN.R-project.org/package=dplyr
-  
-* Hao Zhu (2019). kableExtra: Construct Complex Table with 'kable' and Pipe
-  Syntax. R package version 1.1.0. https://CRAN.R-project.org/package=kableExtra
-
-* Claus O. Wilke (2020). ggridges: Ridgeline Plots in 'ggplot2'. R package version
-  0.5.2. https://CRAN.R-project.org/package=ggridges
-  
-* H. Wickham. ggplot2: Elegant Graphics for Data Analysis. Springer-Verlag New
-  York, 2016.
-
-* Simon Garnier (2018). viridis: Default Color Maps from 'matplotlib'. R package
-  version 0.5.1. https://CRAN.R-project.org/package=viridis
-
-* Bob Rudis (2020). hrbrthemes: Additional Themes, Theme Components and Utilities
-  for 'ggplot2'. R package version 0.8.0.
-  https://CRAN.R-project.org/package=hrbrthemes
-
-* Baptiste Auguie (2017). gridExtra: Miscellaneous Functions for "Grid" Graphics.
-  R package version 2.3. https://CRAN.R-project.org/package=gridExtra
-
-* Hadley Wickham and Dana Seidel (2020). scales: Scale Functions for
-  Visualization. R package version 1.1.1.
-  https://CRAN.R-project.org/package=scales
-
-* Yihui Xie, Joe Cheng and Xianying Tan (2020). DT: A Wrapper of the JavaScript
-  Library 'DataTables'. R package version 0.15.
-  https://CRAN.R-project.org/package=DT
-  
-* C. Sievert. Interactive Web-Based Data Visualization with R, plotly, and shiny.
-  Chapman and Hall/CRC Florida, 2020.
-
-* Top 50 ggplot2 Visualizations - The Master List (With Full R Code). (2020). Retrieved 28 August 2020, from http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html
-
-* Holtz, Y. (2020). The R Graph Gallery – Help and inspiration for R charts. Retrieved 28 August 2020, from https://www.r-graph-gallery.com/
-
-* rfordatascience/tidytuesday. (2020). Retrieved 28 August 2020, from https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-03-10/readme.md
-
-* Tuition Tracker. (2020). Retrieved 28 August 2020, from https://www.tuitiontracker.org/
-
-* Fast Facts: Tuition costs of colleges and universities (76). (2020). Retrieved 28 August 2020, from https://nces.ed.gov/fastfacts/display.asp?id=76
-
-* Tuition and Fees, 1998-99 Through 2018-19. (2020). Retrieved 28 August 2020, from https://www.chronicle.com/article/tuition-and-fees-1998-99-through-2018-19/
-
-* The cost of studying at a university in the United States. (2020). Retrieved 28 August 2020, from https://www.timeshighereducation.com/student/advice/cost-studying-university-united-states
+Let's look at the small snippets of the various data sets and the percentage of missing values in the variables, and get a better understanding of the variables.
 
 
