--- a/index.Rmd
+++ b/index.Rmd
@@ -122,5 +122,47 @@ head(salary_potential,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c
 - mid_career_pay having double datatype defines the	estimated mid career pay in USD.
 - make_world_better_percent having double datatype represents the	percent of alumni who think they are making the world a better place.
 -stem_percent having double datatype defines the percent of student body in science, technology, engineering and mathematics (STEM).
+## Data on the Tuition Cost
+
+The Tuition cost data set is obtained from [the Chronicle of Higher Education.](https://www.chronicle.com/article/tuition-and-fees-1998-99-through-2018-19)
+
+```{r}
+vis_miss(tuition_cost)
+```
+```{r}
+# not removing room and board na values as we are not considering it in analysis 
+tuition_cost <- tuition_cost %>% filter(!is.na(state))
+```
+
+
+```{r tc, echo=FALSE}
+head(tuition_cost,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
+```
+
+- in_state_tuition having double datatype depicts the Tuition fee for in-state residents in USD.
+- out_of_state_tuition	double	Tuition for out-of-state residents in USD.
+
+## Data on Tuition Income
+
+The tuition income has been obtained from the dataset [Tuition Tracker](https://www.tuitiontracker.org/) and [Priceconomics.](https://priceonomics.com/ranking-the-most-and-least-diverse-colleges-in/).
+
+```{r}
+vis_miss(tuition_income,warn_large_data = F)
+```
+
+
+
+```{r ti, echo=FALSE}
+head(tuition_income,3) %>% kableExtra::kable() %>% kableExtra::kable_styling(c("hover" , "striped"))
+```
+ 
+- campus having	character datatype depicts whether the school is	On or off-campus.
+- net_cost having double datatype denotes Net-cost - average actually paid after scholarship/award.
+- income_lvl having	character datatype gives u information about the	Income bracket.
+
+
+## Data Structure and Cleaning Process
+
+All the information gathered in these different data files was achieved by web scraping using the rvest library, html nodes, html url, and generating data set in tibble, mutating new columns and linking rows together later on. All the data was scraped and written in csv and later, the csv was read in to R environment using the readr function.
 
 
